logo images changes

--- a/src/app/layout/baseheader/baseheader.component.html
+++ b/src/app/layout/baseheader/baseheader.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary" class="headerFixed">
   HotCake
+  <img src="../../../assets/hotcakeimage.png" alt="Smiley face" height="50" width="80" class ="right">
 </mat-toolbar>
+
 
 
