--- a/src/app/layout/masterheader/masterheader.component.html
+++ b/src/app/layout/masterheader/masterheader.component.html
@@ -20,6 +20,7 @@
   HotCake
   <span class="example-spacer"></span>
   <div class="example-icon"><img [src]="photoimage!= null ? photoimage : tempimage" width="50" height="50" ></div>
+  <img src="../../../assets/hotcakeimage.png" alt="Smiley face" height="50" width="80" >
 </mat-toolbar>
 
 
