--- a/src/app/applyjob/applyjob.component.css
+++ b/src/app/applyjob/applyjob.component.css
@@ -27,7 +27,7 @@
 
 .jobliststyle
 {
-    
+
     background-color: #ffffff;
     border: 2px solid #ffffff;
     border-radius: 5px;
@@ -50,4 +50,13 @@
 
 .materialicons {
   font-size: 17px;
+}
+virtual-scroll {
+  display: block;
+  height: 580px;
+}
+mat-list-item {
+  display: block;
+  width: 100%;
+  height: 240px;
 }
