--- a/src/app/searchjob/searchjob.component.css
+++ b/src/app/searchjob/searchjob.component.css
@@ -57,5 +57,10 @@
 }
 virtual-scroll {
   display: block;
+  height: 500px;
+}
+mat-list-item {
+  display: block;
   width: 100%;
+  height: 200px;
 }
