--- a/src/app/applyjob/applyjob.component.css
+++ b/src/app/applyjob/applyjob.component.css
@@ -54,9 +54,10 @@
 virtual-scroll {
   display: block;
   height: 580px;
+  margin-bottom: 45px;
 }
 mat-list-item {
   display: block;
   width: 100%;
-  height: 240px;
+  height: 230px;
 }
