--- a/src/app/searchjob/searchjob.component.css
+++ b/src/app/searchjob/searchjob.component.css
@@ -58,9 +58,10 @@
 virtual-scroll {
   display: block;
   height: 500px;
+  margin-bottom: 45px;
 }
 mat-list-item {
   display: block;
   width: 100%;
-  height: 200px;
+  height: 185px;
 }
