--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,12 +7,12 @@
       <!-- 1 Personal Details -->
 	    <ng-template matStepLabel>Personal Details</ng-template>
 	  <mat-form-field class="input-full-width">
-      <input matInput placeholder="Last name, First name" formControlName="fullname" onkeypress="return (event.charCode >= 65 && event.charCode <= 122) || event.charCode ==44" pattern ="[a-zA-Z ]+"[(ngModel)]="userprofile.fullname"/>
+      <input matInput placeholder="Last name, First name" formControlName="fullname" (keypress)= "textOnly($event)" pattern ="[a-zA-Z ]+"[(ngModel)]="userprofile.fullname"/>
     </mat-form-field>
 	  <br>
 	<mat-form-field class="input-full-width">
 	<span matPrefix>+91 &nbsp;</span>
-      <input matInput type="tel" placeholder="Contact Number" onkeypress="return event.charCode >= 48 && event.charCode <= 57" pattern="\d{10}" maxlength ="10" [formControl]="contactFormControl"class="input-full-width" [(ngModel)]="userprofile.contactnumber"/>
+      <input matInput type="tel" placeholder="Contact Number" (keypress)= "numberOnly($event)" pattern="\d{10}" maxlength ="10" [formControl]="contactFormControl"class="input-full-width" [(ngModel)]="userprofile.contactnumber"/>
       <mat-error *ngIf="contactFormControl.hasError('pattern') && !contactFormControl.hasError('required')" required>
       Please enter a valid mobile Number
     </mat-error>
@@ -87,12 +87,12 @@
           <br>
 
 	<mat-form-field class="input-full-width">
-    <input matInput placeholder="Reference Name" onkeypress="return (event.charCode >= 65 && event.charCode <= 122) || event.charCode ==44" pattern ="[a-zA-Z ]+"formControlName="referencename" class="input-full-width" [(ngModel)]="userprofile.referencename">
+    <input matInput placeholder="Reference Name" (keypress)= "textOnly($event)" pattern ="[a-zA-Z ]+"formControlName="referencename" class="input-full-width" [(ngModel)]="userprofile.referencename">
 	</mat-form-field>
 	<br>
 	<mat-form-field class="input-full-width">
 	<span matPrefix>+91 &nbsp;</span>
-    <input matInput type="tel" placeholder="Reference Number" onkeypress="return event.charCode >= 48 && event.charCode <= 57" minlength ="10" maxlength ="10" [formControl]="referenceFormControl" class="input-full-width" [(ngModel)]="userprofile.referencenumber">
+    <input matInput type="tel" placeholder="Reference Number" (keypress)= "numberOnly($event)" minlength ="10" maxlength ="10" [formControl]="referenceFormControl" class="input-full-width" [(ngModel)]="userprofile.referencenumber">
 	<mat-error *ngIf="referenceFormControl.hasError('pattern') && !referenceFormControl.hasError('required')" required>
       Please enter a valid mobile Number
     </mat-error>
