--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,10 @@
+<div class ="loginmessage">
+  <h3>
+    &nbsp;&nbsp;Apply to jobs on the go
+  </h3>
+</div>
+<h6 class ="loginmessagesub"> &nbsp;&nbsp;Find Your Dream Job On-The-Go Using Hot Cake Mobile App</h6>
+
 <br><br>
 <button type="button"  class="btn btn-primary btn-sm buttonblock" (click) ='facebooklogin()'>Facebook</button>
 
@@ -6,3 +13,11 @@
 
 <br><br>
 <button type="button" class="btn btn-info btn-sm buttonblock" (click) ='twitterlogin()'>Twitter</button>
+<br><br>
+<br><br><br>
+<div class ="loginmessagesub">
+<mat-icon color="warn" class ="materialicons">call</mat-icon> Toll No: +91-44-99393992  <br>
+<mat-icon color="warn" class ="materialicons">sms</mat-icon> Whats App No: +91-40-99393992  <br>
+<mat-icon color="warn" class ="materialicons">mail</mat-icon> Email: contact@hotcake.com </div> <br>
+<br>
+
