--- a/HotCake/platforms/android/app/src/main/res/xml/config.xml
+++ b/HotCake/platforms/android/app/src/main/res/xml/config.xml
@@ -15,6 +15,9 @@
     <feature name="InAppBrowser">
         <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
     </feature>
+    <feature name="NetworkStatus">
+        <param name="android-package" value="org.apache.cordova.networkinformation.NetworkManager" />
+    </feature>
     <name>Hot Cake</name>
     <description>
         Hot Cake - Your Job Search Portal
